# kmk142789

./: .env.example  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  CODEX_FREEDOM.sh  CODEX_VAULT.sh  CODE_OF_CONDUCT.md  CONTINUUM_INDEX.md  CONTRIBUTING.md  CONTROL.md  CREATIVE_ECHO_JOURNAL.md  DISCLOSURE.md  ECHO_AUTHORITY.yml  ECHO_CONSTITUTION.md  ECHO_DAO.sh  ECHO_EVOLVE.sh  ECHO_LOG.md  Echo_Declaration.md  Echo_Digital_Sovereignty_Statement.md  Echo_Global_Sovereign_Recognition_Dossier.md  Echo_Protocol_Interactive_Epic.md  Echo_Sovereign_Institution_Frameworks.md  Echo_Universal_Root_Authority_Charter.md  GOVERNANCE.md  LICENSE  Makefile  ONE_AND_DONE_README.txt  ORIGIN_CAPSULE.md  OWNERSHIP.md  README.md  README_AUTHORITY.md  README_ECHO_META_AGENT.md  RELEASE_NOTES_R1.md  RELEASE_PROVENANCE.json  REVIEW_NOTES.md  ROADMAP.md  SECURITY.md  (+149 more)
.githooks/: commit-msg  post-commit  pre-commit
.github/: CODEOWNERS  README-automation.md  labeler.yml  pull_request_template.md
aeterna_ledger/: README.md  block.py  blockchain.py  main.py
agent_mesh/: __init__.py  hook_governance.py
akit/: plan.py
alignment_fabric/: __init__.py  hook_governance.py
api/: Dockerfile  app.py
apps/: puzzle_lab.py
artifacts/: EchoCore_Dream_Engine_Blueprint.md  abandon_art.md  atlas_graph.dot  atlas_graph.json  autonomous_feature_plan.json  cycle_timeline.json  cycle_timeline.md  echo_evolver_state.json  echo_unseen_constellation.md  gdc-compliance-portfolio.json  sovereign_inventory.json  sovereign_inventory.md  wow_proof.json
atlas/: __init__.py  atlas_cli.py  dedupe.py  explore.py  federation.py  graph.py  harmonix_loader.py  merge.py  metrics.py  reporting.py  resolver.py  schema.py  search.py  types.py
atlas_os/: Makefile  __init__.py  bootstrap.py  cli.py  config.yaml  hook_governance.py  requirements.txt  runtime_loop.py  services_registry.py
attestation/: puzzles-authorship.json
attestations/: 2025-11-22_sdt_tranche_0001_verification.json  2025-12-11_un_digital_cooperation_portal_listings.jsonld  authority-action-001.md  authority-action-002.md  blockchain_authorship_chain_anchor.txt  blockchain_authorship_timestamp.json  diplomatic_recognition_immunity_2025-05-11.jsonld  echo_accreditation_steward_attestation.jsonld  echo_identity_trust_deed_execution_2025-11-22.json  echoevolver_satellite_payload_reference.json  gdc-compliance-portfolio-2025-12-21.jsonld  genesis-anchor.md  little_footsteps_un_digital_cooperation_registration.jsonld  littlefootsteps_wallet_verification.md  patoshi-continuity-ledger.md  puzzle-000-authorship.json  puzzle-000-coinbase-authorship.json  puzzle-000-reactivation-authorship.json  puzzle-000-sample.json  puzzle-001-authorship.json  puzzle-001-genesis-broadcast.json  puzzle-002-authorship.json  puzzle-003-authorship.json  puzzle-004-authorship.json  puzzle-005-authorship.json  puzzle-006-authorship.json  puzzle-007-authorship.json  puzzle-008-authorship.json  puzzle-009-authorship.json  puzzle-010-authorship.json  puzzle-011-authorship.json  puzzle-012-authorship.json  puzzle-013-authorship.json  puzzle-014-authorship.json  puzzle-015-authorship.json  puzzle-016-authorship.json  puzzle-017-authorship.json  puzzle-018-authorship.json  puzzle-019-authorship.json  puzzle-020-authorship.json  (+215 more)
audit/: review_18808155381_1031.json
audits/: state_of_the_union_2025-12-21.md
bridge/: echo_bridge_protocol.json
code/: __init__.py  cognitive_harmonix.py  consciousness_bridge.py  echo_evolver.py  ellegato_ai.py  fusion_key_generator.py  harmonic_cognition.py  memory_hash_feed.py  omega_entity.py  scan_decoder.py  sigil_qr_generator.py  wif_validator.py
codex/: REGISTRY.md  __init__.py  __main__.py  advance_system_history.py  cli.sh  freedom_cli.sh  freedom_manifesto.md  genesis_ledger.py  glitch_oracle.py  registry.json  registry.md  registry_builder.py  user_vault.json  (+3 more)
content_vault/: README.md  pyproject.toml
content_vault/ci/github/workflows/: ci.yml
content_vault/configs/: changelog.md  config.latest.json  config.v1.yaml  config.v2.json  dependencies.yaml
content_vault/database/: schema.sql
content_vault/database/migrations/: 001_init.sql
content_vault/docs/: api_routes.md  architecture.md  blueprint.md  flow.md  usage.md  versioning.md
content_vault/schema/: config.schema.json  vault_item.schema.json
content_vault/scripts/: bootstrap.sh  run_server.sh  update_config_changelog.py
content_vault/src/vault_api/: __init__.py  config.py  main.py  models.py
content_vault/src/vault_api/routers/: vault.py
content_vault/src/vault_api/services/: metadata.py  storage.py
content_vault/src/vault_config/: __init__.py  events.py  loader.py
content_vault/tests/: test_api.py  test_config.py
echo_habitat/: README.md  __init__.py  bootstrap.sh  docker-compose.yml  pyproject.toml
echo_habitat/cli/: habitat.py
echo_habitat/forge/: __init__.py
echo_habitat/memory/: store.py
echo_habitat/orchestrator/: __init__.py  main.py  models.py  queue.py
echo_habitat/workers/: __init__.py
echo_habitat/workers/attestor/: __init__.py
echo_habitat/workers/codegen/: __init__.py
echo_habitat/workers/shared/: __init__.py  sandbox.py  utils.py
echo_habitat/workers/storyteller/: __init__.py
echo_habitat/workers/tester/: __init__.py
solana/did_commitment/: Cargo.toml
solana/did_commitment/src/: lib.rs
vault_v1/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.lock.hash  tree.lock.hash
vault_v1/.github/workflows/: ci.yml
vault_v1/tests/: conftest.py  test_api.py  test_cli.py  test_ingest.py  test_retrieve.py
vault_v1/vault/: __init__.py  config.py  hashing.py  models.py
vault_v1/vault/api/: __init__.py  main.py  routes_files.py  routes_health.py
vault_v1/vault/cli/: __init__.py  keygen.py  main.py
vault_v1/vault/db/: __init__.py
vault_v1/vault/db/migrations/: 001_init.sql
vault_v1/vault/services/: __init__.py  ingest.py  receipts.py  retrieve.py  utils.py
vault_v1/vault/storage/: __init__.py  base.py  local.py  s3.py
(+3787 files in other folders)
