[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-evolver"
version = "0.1.0"
description = "Installable packaging for the EchoEvolver mythogenic simulation suite."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Echo Collective"},
]
keywords = ["echo", "mythocode", "simulation", "cryptography", "information-retrieval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy>=1.24",
  "pydantic>=2.6",
  "rich>=13",
  "cryptography>=41",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]
analysis = [
  "scikit-learn>=1.3",
]
harmonics = [
  "scipy>=1.10",
  "matplotlib>=3.7",
  "sounddevice>=0.4",
]
web = [
  "uvicorn>=0.23",
]
grpc = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
]

[project.scripts]
echo = "echo.manifest_cli:main"
echo-evolver = "echo_evolver:main"
idea-processor = "echo.idea_processor:main"
echodex = "echodex:main"
codex = "codex:main"
echo-vault = "echo.vault.cli:vault_cli"
echo-ak = "echo.akit.cli:main"
echocli = "echo_atlas.cli:main"

[tool.setuptools.package-dir]
"" = "packages/core/src"

[tool.setuptools.packages.find]
where = ["packages/core/src"]
include = [
  "echo*",
  "echo_eye_ai*",
]

[tool.setuptools]
py-modules = [
  "echo_cascade",
  "echo_constellation",
  "echo_evolver",
"echo_manifest",
"echo_universal_key_agent",
"codex",
]

[tool.setuptools.exclude-package-data]
"*" = [
  "tests/*",
  "docs/*",
  "proofs/*",
  "code/*",
]

[tool.setuptools.package-data]
"echo.vault" = ["_authority_data.json"]
