[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-evolver"
version = "0.1.0"
description = "Installable packaging for the EchoEvolver mythogenic simulation suite."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [
  {name = "Echo Collective"},
]
keywords = ["echo", "mythocode", "simulation", "cryptography", "information-retrieval"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
  "numpy>=1.24",
  "sympy>=1.12",
  "pydantic>=2.6",
  "rich>=13",
  "cryptography>=41",
  "pandas>=2.1",
  "streamlit>=1.32",
  "typer>=0.9",
  "matplotlib>=3.8",
  "jsonschema>=4.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.3",
]
analysis = [
  "scikit-learn>=1.3",
]
harmonics = [
  "scipy>=1.10",
  "matplotlib>=3.7",
  "sounddevice>=0.4",
]
web = [
  "uvicorn>=0.23",
]
grpc = [
  "grpcio>=1.60",
  "grpcio-tools>=1.60",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[project.scripts]
echo = "echo.cli:main"
echo-manifest = "echo.manifest_cli:main"
echo-evolver = "echo_evolver:main"
echo-evolve = "echo_evolve:main"
echo-sync = "echo_sync:main"
echo-dominion-cascade = "echo_dominion_cascade:main"
echo-unleash = "echo_unleash:main"
idea-processor = "echo.idea_processor:main"
echodex = "echodex:main"
codex = "codex:main"
echo-vault = "echo.vault.cli:vault_cli"
echo-ak = "echo.akit.cli:main"
echocli = "echo_atlas.cli:main"
echo-puzzle-lab = "echo_cli.main:main"
dominion-plan = "dominion.plan:main"
dominion-apply = "dominion.apply:main"
verify-claims = "tools.verify_claims:main"
dominion-archive = "dominion.archive:main"
echo-proof-orchestrator = "echo.orchestrator.cli:main"
next-level = "next_level:main"
hypermesh-weaver = "echo.hypermesh_cli:main"
echo-orbital-resonance = "orbital_resonance_engine:main"
pulse-storyboard = "echo_pulse_storyboard:main"

[tool.setuptools.package-dir]
"" = "packages/core/src"
"dominion" = "dominion"

[tool.setuptools.packages.find]
where = ["packages/core/src", "."]
include = [
  "echo*",
  "echo_eye_ai*",
  "dominion*",
]

[tool.setuptools]
py-modules = [
  "echo_cascade",
  "echo_constellation",
  "echo_evolver",
  "echo_manifest",
  "echo_evolve",
  "echo_sync",
  "echo_dominion_cascade",
  "echo_unleash",
  "echo_universal_key_agent",
  "codex",
  "next_level",
]

[tool.setuptools.exclude-package-data]
"*" = [
  "tests/*",
  "docs/*",
  "proofs/*",
  "code/*",
]

[tool.setuptools.package-data]
"echo.vault" = ["_authority_data.json"]
