[project]
name = "content-vault"
version = "0.1.0"
description = "Reference implementation for a modular content-addressable data vault system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
